Sql driver is working, connects and retrieves data. API driver file created but not ready to start. Forecast class created with functions to attach unit characters to the needed values.  Now ready to start on GUI to connect to SQL and route into APIDriver for weather retrieval

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,12 +6,17 @@
         xmlns:local="clr-namespace:Veour"
         mc:Ignorable="d"
         Title="MainWindow" Height="700" Width="1260">
-    <Grid>
-        <TextBlock x:Name="testText"></TextBlock>
-        <!-- <Border> -->
-        <!--     <Window> -->
-        <!--          -->
-        <!--     </Window> -->
-        <!-- </Border> -->
-    </Grid>
+    <!-- <StackPanel> -->
+    <!--     <StackPanel> -->
+    <!--          -->
+    <!--     </StackPanel> -->
+    <!--      -->
+    <!--     <Grid> -->
+    <!--          -->
+    <!--     </Grid> -->
+    <!--      -->
+    <!--     <StackPanel> -->
+    <!--          -->
+    <!--     </StackPanel> -->
+    <!-- </StackPanel> -->
 </Window>
