--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -22,8 +22,8 @@
                       IsEditable="True"
                       Width="223" Height="28" Padding="5,0,0,0"
                       FontSize="18" Margin="0,0,8,0"
-                      VirtualizingPanel.IsVirtualizing="True"
-                      VirtualizingPanel.VirtualizationMode="Recycling" IsDropDownOpen="True" AutomationProperties.HelpText="Enter your city and state here">
+                      VirtualizingPanel.IsVirtualizing="True" VirtualizingPanel.VirtualizationMode="Recycling" 
+                      AutomationProperties.HelpText="Enter your city and state here">
                 <ComboBox.ItemsPanel>
                     <ItemsPanelTemplate>
                         <VirtualizingStackPanel/>
