--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -6,44 +6,105 @@
         xmlns:local="clr-namespace:Veour"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-        Title="MainWindow" Height="700" Width="1260" WindowStartupLocation="CenterScreen">
-    <StackPanel Background="#254b8f">
-        <StackPanel Orientation="Horizontal"
+        Title="Veour" Height="750" Width="1260" WindowStartupLocation="CenterScreen"
+        WindowStyle="None"
+        AllowsTransparency="true"
+        Background="Transparent">
+    <Border CornerRadius="10" BorderThickness="1">
+        <Border.BorderBrush>
+            <SolidColorBrush Color="#001945"/>
+        </Border.BorderBrush>
+        <Grid>
+            <Grid.RowDefinitions>
+                <!-- Top Bar -->
+                <RowDefinition Height="100"/>
+                <!-- Main Content Area -->
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Border CornerRadius="10,10,0,0" Grid.Row="0">
+                <Border.Background>
+                    <SolidColorBrush Color="#001945"/>
+                </Border.Background>
+
+                <StackPanel Orientation="Horizontal"
                     Background="#001945"
                     Height="100" Width="1260">
 
-            <Image Source="\Assets\Images\logo.png" Height="60" Width="200"
+                    <Image Source="\Assets\Images\logo.png" Height="60" Width="200"
                    Margin="60,0,105,0" VerticalAlignment="Center"/>
 
-            <Label x:Name="label" Content="Enter Your Location" Foreground="White"
+                    <Label x:Name="label" Content="Enter Your Location" Foreground="White"
                    FontSize="24" VerticalAlignment="Center" Margin="0,0,8,0"/>
 
-            <ComboBox x:Name="CityStateInput"
+                    <ComboBox x:Name="CityStateInput"
                       IsEditable="True"
                       Width="223" Height="28" Padding="5,0,0,0"
                       FontSize="18" Margin="0,0,8,0"
                       VirtualizingPanel.IsVirtualizing="True" VirtualizingPanel.VirtualizationMode="Recycling" 
                       AutomationProperties.HelpText="Enter your city and state here">
-                <ComboBox.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <VirtualizingStackPanel/>
-                    </ItemsPanelTemplate>
-                </ComboBox.ItemsPanel>
-            </ComboBox>
+                        <ComboBox.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <VirtualizingStackPanel/>
+                            </ItemsPanelTemplate>
+                        </ComboBox.ItemsPanel>
+                    </ComboBox>
 
 
-            <Button x:Name="SearchButton" Content="Search" Height="32" Padding="5" Width="64" FontSize="18" 
+                    <Button x:Name="SearchButton" Content="Search" Height="32" Padding="5" Width="64" FontSize="18" 
                     Click="SearchButton_Click">
-                <Button.Resources>
-                    <Style TargetType="Border">
-                        <Setter Property="CornerRadius" Value="3"/>
-                    </Style>
-                </Button.Resources>
-            </Button>
-        </StackPanel>
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="3"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+                </StackPanel>
+            </Border>
 
-        <Grid>
 
+            <Border Grid.Row="1" CornerRadius="0,0,10,10">
+                <Border.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                        <GradientStop Color="#001945" Offset="0.0"/>
+                        <GradientStop Color="#021c49" Offset="0.1"/>
+                        <GradientStop Color="#0b285b" Offset="0.28"/>
+                        <GradientStop Color="#163771" Offset="0.50"/>
+                        <GradientStop Color="#1e4180" Offset="0.65"/>
+                        <GradientStop Color="#254b8f" Offset=".85"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <!-- Forecast Section -->
+                        <RowDefinition Height="*"/>
+                        <!-- Empty Spacer @ Bottom -->
+                        <RowDefinition Height="100"/>
+                    </Grid.RowDefinitions>
+
+                    <!-- City/State Bar -->
+                    <Border CornerRadius="10,10,0,0"
+                            Grid.Row="0">
+                        <Border.Background>
+                            <SolidColorBrush Color="Transparent"/>
+                        </Border.Background>
+                        
+                        
+                    </Border>
+
+                    <!-- Forecast Section -->
+                    <Border Grid.Row="1">
+
+
+                    </Border>
+
+                    <Border Grid.Row="1"
+                        Background="Transparent">
+                    </Border>
+                </Grid>
+            </Border>
         </Grid>
-    </StackPanel>
+
+    </Border>
 </Window>
