--- a/App.xaml
+++ b/App.xaml
@@ -2,6 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Veour"
+             xmlns:viewModel="clr-namespace:Veour.ViewModels" 
+             xmlns:view="clr-namespace:Veour.Views"
              StartupUri="/Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -12,8 +14,5 @@
                 <Setter Property="FontFamily" Value="Calibri Light" />
             </Style>
         </ResourceDictionary>
-
-
-
     </Application.Resources>
 </Application>
