--- a/Views/ForecastView.xaml
+++ b/Views/ForecastView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Veour.Views.Forecast"
+﻿<UserControl x:Class="Veour.Views.ForecastView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
