--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -124,7 +124,11 @@
                     </Grid.RowDefinitions>
                     
                     <!-- Forecast Section -->
-                    <Viewbox Stretch="Uniform">
+                    <Frame x:Name="contentFrame" />
+
+
+
+                    <!-- <Viewbox Stretch="Uniform">
                         <ItemsControl ItemsSource="{Binding Forecast}" AlternationCount="7">
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
@@ -194,7 +198,7 @@
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
-                    </Viewbox>
+                    </Viewbox>  -->
                 </Grid>
             </Border>
         </Grid>
