--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Veour.MainWindow"
+﻿<Window x:Class="Veour.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -124,7 +124,7 @@
                     </Grid.RowDefinitions>
                     
                     <!-- Forecast Section -->
-                    <Frame x:Name="contentFrame" />
+                    <ContentControl x:Name="contentBox" />
 
 
 
