--- a/Views/ForecastView.xaml
+++ b/Views/ForecastView.xaml
@@ -18,12 +18,14 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Border BorderBrush="White" BorderThickness="0,0,1,0" MinHeight="550" MinWidth="180"
+                    <Border BorderBrush="White"  MinHeight="550" MinWidth="180" x:Name="ForecastBorder"
                              Grid.Column="{Binding Path=(ItemsControl.AlternationIndex), 
                                              RelativeSource={RelativeSource FindAncestor, 
                                              AncestorType={x:Type ContentPresenter}}}">
-
                         <StackPanel Orientation="Vertical">
+                            
+                            <!-- TODO MUST DELETE THIS TEST BOX -->
+                            <TextBlock x:Name="test" Foreground="White"></TextBlock>
 
                             <TextBlock Text="{Binding DayName}" x:Name="dayNameString"  HorizontalAlignment="Center" Padding="0,15,0,15"
                                         FontSize="20" FontWeight="Bold" Foreground="White"/>
@@ -36,7 +38,7 @@
                             <TextBlock Text="{Binding TempString}" HorizontalAlignment="Center" Margin="0,0,0,10"
                                         FontSize="40" FontWeight="Bold"  Foreground="White"/>
 
-                            <TextBlock Text="Current" HorizontalAlignment="Center" Margin="0,0,0,5"
+                            <TextBlock x:Name="DayStatus" HorizontalAlignment="Center" Margin="0,0,0,5"
                                         FontSize="16" FontWeight="SemiBold" Foreground="White" />
 
                             <TextBlock Text="{Binding WeatherDescription}" FontSize="20" Margin="0,0,0,10"
@@ -76,6 +78,23 @@
                             </StackPanel>
                         </StackPanel>
                     </Border>
+                    <DataTemplate.Triggers>
+                        <!-- 
+                        -->
+                        <DataTrigger Binding="{Binding Path=(ItemsControl.AlternationIndex), RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ContentPresenter}}}" Value="0">
+                            <Setter TargetName="test" Property="Text" Value="{Binding Path=(ItemsControl.AlternationIndex), RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ContentPresenter}}}"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding FinalDay}" Value="false">
+                            <Setter TargetName="ForecastBorder" Property="BorderThickness" Value="0,0,1,0"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding CurrentDay}" Value="false">
+                            <Setter TargetName="DayStatus" Property="Text" Value="Average"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding CurrentDay}" Value="true">
+                            <Setter TargetName="DayStatus" Property="Text" Value="Current"/>
+                        </DataTrigger>
+                        
+                    </DataTemplate.Triggers>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
