--- a/Styles/ButtonStyles.xaml
+++ b/Styles/ButtonStyles.xaml
@@ -4,7 +4,7 @@
 >
     <!-- Control Bar Button -->
     <Style x:Key="winBtnClose" TargetType="Button">
-        <Setter Property="Width" Value="35"/>
+        <Setter Property="MinWidth" Value="35"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="Template">
@@ -28,7 +28,7 @@
     </Style>
     
     <Style x:Key="winBtn" TargetType="Button">
-        <Setter Property="Width" Value="35"/>
+        <Setter Property="MinWidth" Value="35"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="Template">
